modules/gdscript/tests/scripts/parser/errors/assignment_in_var.gd
func test():
	var hello = "world" = "test"
